assets/less/tbpro-style.less
/* ... */
section#features {
    padding-bottom: @space-72;

    @media (min-width: @lg) {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        gap: @space-12;

        .feature-card:first-child {
            grid-row: 1 / -1;
            height: 100%;
        }
    }

    .feature-card {
        backdrop-filter: blur(24px);
        -webkit-backdrop-filter: blur(24px);

        box-shadow: inset 0 0 74px 0 rgba(0, 0, 0, 0.05);
        border: solid 1px rgba(255, 255, 255, 0.05);
        border-radius: 1.5rem;

        min-width: 0;

        color: var(--color-text-base);

        display: flex;
        flex-direction: column;

        @media (min-width: @lg) {
            gap: 0.875rem;
        }

        // For mobile layout, space above a feature card, if there's a previous one.
        &+.feature-card {
            margin-top: @gutter;
            @media (min-width: @lg) {
                margin-top: 0;
            }
        }

        .card-info {
            .card-header {
                display: flex;
                gap: 0.9375rem;

                .app-icon {
                    flex: 0 0 auto;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    aspect-ratio: 1 / 1;

                    // debug
                    height: 48px;
                    width: 48px;

                }
                .app-header {
                    flex: 1;
                    display: flex;
                    gap: 4px;
                    flex-direction: column;

                    & > * {
                        display: block;
                        margin: 0;
                    }

                    .app-name {
                        color: var(--color-text-highlight);
                        text-transform: uppercase;

                        .brand-eyebrow-xs();
                        @media (min-width: @lg) {
                            .brand-eyebrow-lrg();
                        }
                    }
                    .app-tagline {
                        .brand-headline-h3-sm();
                        @media (min-width: @lg) {
                            .brand-headline-h3-lrg();
                        }
                    }
                }
            }
            .card-body {
                text-align: left;
                .web-body-small();
                line-height: 1.23; // Specified in Zeplin
                @media (min-width: @md) {
                    .web-body-default();
                }
            }
        }

        .card-image {
            background-size: 100% auto;
            background-position: center center;
            background-repeat: no-repeat;
            height: auto;
            aspect-ratio: 16/9;

            @media (min-width: @lg) {
                aspect-ratio: 21/9;
            }
        }

    }

    @media (min-width: @lg) {
        // First card retains stacked layout.
        .feature-card:not(:first-child) {
            display: grid;
            grid-template-rows: 1fr;
            grid-template-columns: 1fr 1fr;
        }
    }

    .mixin-card-gradient(@accent-color, @darken-by: 30%, @accent-position: 100%) {
        background-image: linear-gradient(349deg,
                                          #0f1623 0%,
                                          #0a0f19 40%,
                                          #06090e 85%,
                                          darken(@accent-color, @darken-by) @accent-position);
        background-clip: padding-box;
    }

    .feature-card-1 {
        .mixin-card-gradient(#1373d9, 23%);
        justify-content: space-between;

        // Copied from zeplin:
        padding: 32px 17.4px 16.1px 19px;

        .card-image {
            .mixin-background-image('/media/img/thunderbird/tbpro/xs-thundermail-hero-high-res');
            @media (min-width: @md) {
                height: 100%;
                width: 100%;
            }
            @media (min-width: @lg) {
                .mixin-background-image('/media/img/thunderbird/tbpro/xl-thundermail-hero-high-res');
            }
        }
    }
    .feature-card-2 {
        .mixin-card-gradient(#008080, 13%);

        // Copied from zeplin:
        padding: 32px 1px 4px 32px;

        .card-image {
            .mixin-background-image('/media/img/thunderbird/tbpro/xs-appointment-hero-high-res');
            @media (min-width: @lg) {
                aspect-ratio: unset;
                .mixin-background-image('/media/img/thunderbird/tbpro/xl-appointment-hero-high-res');
            }
        }

    }
    .feature-card-3 {
        .mixin-card-gradient(desaturate(#fec18a, 10%), 10%, 120%);

        // Copied from zeplin:
        padding: 32px 1px 16px 32px;

        .card-image {
            .mixin-background-image('/media/img/thunderbird/tbpro/xs-send-hero-high-res');
            @media (min-width: @lg) {
                aspect-ratio: unset;
                .mixin-background-image('/media/img/thunderbird/tbpro/xl-send-hero-high-res')
            }
        }
    }
}
/* ... */

